@@ -1,3 +1,13 @@
+2001-01-11  Timothy Jenness  <t.jenness@jach.hawaii.edu>
+
+	* Display.pm: Delay loading of specific display classes until required
+
+	* Recipe.pm (_check_obey_status_string): Add check for ORAC__BADENG
+
+	* Msg/Task/ADAM.pm: Translate to ORAC__BADENG
+
+	* Constants.pm: Add ORAC__BADENG
+
 2001-01-11  Tim Jenness  <timj@jach.hawaii.edu>
 
 	* Frame/Michelle.pm: Now a subclass of CGS4
